@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-10-10T00:30:23Z",
+  "timestamp" : "2023-10-20T08:08:45Z",
   "count_outdated" : 453,
   "uniques_outdated" : 285,
-  "count" : 455,
-  "uniques" : 286,
+  "count" : 456,
+  "uniques" : 287,
   "clones" : [
     {
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
